landing for portugal

--- a/scss/applications.scss
+++ b/scss/applications.scss
@@ -46,6 +46,9 @@
   &__subtitle {
     display: flex;
     margin-bottom: 4px;
+    color: $white;
+    font-size: 12px;
+    font-weight: 300;
   }
 }
 
