--- a/scss/1.scss
+++ b/scss/1.scss
@@ -80,10 +80,8 @@
     background-position: bottom;
     background-size: 100% auto;
     z-index: 1;
-
     &-hero {
-      width: 90%;
-      max-width: 380px;
+      max-height: 600px;
       z-index: 3;
     }
 
