--- a/scss/animation/animation.scss
+++ b/scss/animation/animation.scss
@@ -44,6 +44,11 @@
     opacity: 1;
   }
 }
+.animate-hero--active {
+  opacity: 1;
+  transition: all 0.6s ease-in-out 0s;
+  transform: translate(0, 10px) scale(1, 1);
+}
 
 @media (min-width: 720px) {
   .anima-show {
@@ -202,7 +207,10 @@
 .animate-hero--active {
   opacity: 1;
   transition: all 0.6s ease-in-out 0s;
-  transform: translate(10px, 10px) scale(1, 1);
+  transform: translate(0, 10px) scale(1, 1);
+  @media (min-width: 1200px) {
+    transform: translate(40%, 10px) scale(1, 1);
+  }
 }
 
 .animate-late-decoration,
