--- a/scss/1.scss
+++ b/scss/1.scss
@@ -83,6 +83,10 @@
     &-hero {
       max-height: 600px;
       z-index: 3;
+
+      &--mobile {
+        max-width: 80%;
+      }
     }
 
     &--desktop {
