--- a/scss/2.scss
+++ b/scss/2.scss
@@ -23,7 +23,7 @@
     border-radius: 24px;
     margin-bottom: 12px;
     width: 100%;
-    height: 180px;
+    min-height: 180px;
     padding: 17px 20px 17px 8px;
 
     &:last-child {
@@ -44,7 +44,6 @@
 
   &__content {
     margin-left: 8px;
-    padding-top: 21px;
 
     @media (max-width: 360px) {
       width: 124px;
