--- a/scss/2.scss
+++ b/scss/2.scss
@@ -25,6 +25,7 @@
     width: 100%;
     min-height: 180px;
     padding: 17px 20px 17px 8px;
+    align-items: center;
 
     &:last-child {
       margin-bottom: 0;
@@ -47,6 +48,9 @@
 
     @media (max-width: 360px) {
       width: 124px;
+    }
+    @media (max-width: 360px) {
+      padding-top: 21px;
     }
   }
 
