--- a/scss/animation/animation.scss
+++ b/scss/animation/animation.scss
@@ -178,12 +178,12 @@
 }
 
 .animate-circle-2 {
-  right: -0.5%;
-  bottom: 18%;
+  right: 30%;
+  top: 5%;
 
   &.active {
-    right: 2%;
-    bottom: 18%;
+    right: 35%;
+    top: 10%;
   }
 }
 
@@ -209,7 +209,7 @@
   transition: all 0.6s ease-in-out 0s;
   transform: translate(0, 10px) scale(1, 1);
   @media (min-width: 1200px) {
-    transform: translate(40%, 10px) scale(1, 1);
+    transform: translate(10%, 10px) scale(1, 1);
   }
 }
 
