--- a/scss/1.scss
+++ b/scss/1.scss
@@ -71,6 +71,7 @@
 
   &__banner {
     width: 100%;
+    padding-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,6 +83,10 @@
     &-hero {
       max-height: 600px;
       z-index: 3;
+
+      &--mobile {
+        max-width: 80%;
+      }
     }
 
     &--desktop {
