--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -38,7 +38,7 @@
     margin: 0;
     display: flex;
     width: 128px;
-    justify-content: center;
+    justify-content: space-between;
     margin-bottom: 32px;
   }
 
